Fix overflowing graphics imgs

--- a/app/styles/components/s-graphics-post.scss
+++ b/app/styles/components/s-graphics-post.scss
@@ -39,11 +39,11 @@
   img {
     display: block;
     max-width: 100%;
-    max-height: 100%;
+    max-height: calc(100% - 3.5rem - 0.83em);
   }
   img[src$=".svg"], iframe {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 3.5rem - 0.83em);
   }
   .next-picture,
   .previous-picture {
